[gd_scene load_steps=2 format=3 uid="uid://d27l333sajm3f"]

[ext_resource type="Script" path="res://menu/menu.gd" id="1_yf652"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yf652")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 62.0
offset_bottom = 101.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="view" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "graphic"

[node name="audio" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "audio"

[node name="back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "back"

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/view" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/audio" to="." method="_on_option_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/back" to="." method="_on_exit_pressed"]
